--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
 	<h2 id="skills">Skills</h2>
 	<div class="rifky-conten-right-data">Linux Bash Programming <p>Bash Fil</p></div>
-	<div class="rifky-conten-right-data">Website Security <p>-</p></div>
-	<div class="rifky-conten-right-data">Linux <p>All Distro</p></div>
+	<div class="rifky-conten-right-data">FrontEnd Developer <p>HTML, CSS, JS</p></div>
+	<div class="rifky-conten-right-data">Linux <p>Ubuntu, Debian, Elementary</p></div>
 
 </div>
 </div>
