--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 	
 	<h2 id="organization">Organization</h2>
-	<img src="./img/O1.png" style="max-height: 52px;float: left;margin-right: 15px;"><div class="rifky-conten-right-data">Mexious Media Blog <p>Founder & Leader</p></div>
+	<img src="https://4.bp.blogspot.com/-yme6cPbCQLXg/WiMpETIZTuI/AAAAAAAABTI/ce8pBfQhgAYeb_iYrb-uzsZTaMLA5yXQgCLcBGAs/s1600/HiAppHere_com_com.uprui.launcher.marshmallow.png" style="max-height: 52px;float: left;margin-right: 15px;"><div class="rifky-conten-right-data">Mexious Media Blog <p>Founder & Leader</p></div>
 	
 
 	
