--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="rifky-conten">
 <div class="rifky-conten-left">
 	<div class="rifky-conten-left-img-warp">
-	<img src="https://4.bp.blogspot.com/-yme6cPbCQLXg/WiMpETIZTuI/AAAAAAAABTI/ce8pBfQhgAYeb_iYrb-uzsZTaMLA5yXQgCLcBGAs/s1600/HiAppHere_com_com.uprui.launcher.marshmallow.png" />
+	<img src="https://scontent-sit4-1.xx.fbcdn.net/v/t1.0-9/20108322_361282697620883_6094280130566428758_n.jpg?oh=8dd7a1294e02eb259483bf7cab8a8a0d&oe=5ABDF7E5" />
 	</div>
 	<ul>
 	<a href="#personal"><li>personal</li></a>
@@ -59,7 +59,7 @@
 
 	
 	<h2 id="organization">Organization</h2>
-	<img src="https://4.bp.blogspot.com/-yme6cPbCQLXg/WiMpETIZTuI/AAAAAAAABTI/ce8pBfQhgAYeb_iYrb-uzsZTaMLA5yXQgCLcBGAs/s1600/HiAppHere_com_com.uprui.launcher.marshmallow.png" style="max-height: 52px;float: left;margin-right: 15px;"><div class="rifky-conten-right-data">Mexious Media Blog <p>Founder & Leader</p></div>
+	<img src="./img/mexious.png" style="max-height: 52px;float: left;margin-right: 15px;"><div class="rifky-conten-right-data">Mexious Media Blog <p>Founder & Leader</p></div>
 	
 
 	
