--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 	
 	<h2 id="organization">Organization</h2>
-	<img src="./img/mexious.png" style="max-height: 52px;float: left;margin-right: 15px;"><div class="rifky-conten-right-data">Mexious Media Blog <p>Founder & Leader</p></div>
+	<img src="https://scontent-sit4-1.xx.fbcdn.net/v/t1.0-9/22687652_524726477864498_7580515115346660864_n.png?oh=46f23f8f99e090a90f67b2af357cfe73&oe=5AD356F6" style="max-height: 52px;float: left;margin-right: 15px;"><div class="rifky-conten-right-data">Mexious Media Blog <p>Founder & Leader</p></div>
 	
 
 	
