--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Muhammad Rifky A</title>
+<title>Muhammad Rifky Abimayu</title>
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="X-UA-Compatible" content="IE=7" />
 <meta charset="utf-8">
@@ -27,7 +27,7 @@
 	<a href="#experiences"><li>experiences</li></a>
 	<a href="#skills"><li>skills</li></a>
 	</ul>
-	<div class="rifky-conten-left-copy">&#169; Muhammad Rifky A
+	<div class="rifky-conten-left-copy">&#169; Muhammad Rifky 
 		<script type='text/javascript'>
 			var creditsyear = new Date() 
 			;document.write(creditsyear.getFullYear());
