--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html>
 <head>
 <title>Muhammad Rifky Abimayu</title>
+	 <link rel="icon" type="image/x-icon" href="https://rifkytech.github.io/img/mexious.png">
+	
+	
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="X-UA-Compatible" content="IE=7" />
 <meta charset="utf-8">
