--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
 	<img src="https://scontent-sit4-1.xx.fbcdn.net/v/t1.0-9/20108322_361282697620883_6094280130566428758_n.jpg?oh=8dd7a1294e02eb259483bf7cab8a8a0d&oe=5ABDF7E5" />
 	</div>
 	<ul>
-	<a href="#personal"><li>personal</li></a>
-	<a href="#contact"><li>contact</li></a>
-	<a href="#education"><li>education</li></a>
-	<a href="#achievements"><li>achievements</li></a>
-	<a href="#organization"><li>organization</li></a>
-	<a href="#experiences"><li>experiences</li></a>
-	<a href="#skills"><li>skills</li></a>
+	<a href="#personal"><li class="fa fa-home"> Personal</li></a>
+	<a href="#contact"><li>Contact</li></a>
+	<a href="#education"><li>Education</li></a>
+	<a href="#organization"><li>Organization</li></a>
+	<a href="#experiences"><li>Experiences</li></a>
+	<a href="#skills"><li>Skills</li></a>
 	</ul>
 	<div class="rifky-conten-left-copy">&#169; Muhammad Rifky 
 		<script type='text/javascript'>
