--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <meta charset="utf-8">
 <meta name="author" content="Muhammad Rifky Abimayu">
 <meta name="description" content="Welcome to My Official Site">
+<meta content='Muhammad Rifky Abimayu' property='og:site_name' />
+<meta content='https://scontent-sit4-1.xx.fbcdn.net/v/t1.0-9/20108322_361282697620883_6094280130566428758_n.jpg?oh=8dd7a1294e02eb259483bf7cab8a8a0d&oe=5ABDF7E5' property='og:image' />
 <meta property="description" content="Welcome to My Official Site">
 <link href="./css/main.css" rel="stylesheet" type="text/css">
 </head>
