--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
 <title>Muhammad Rifky Abimayu</title>
-	 <link rel="icon" type="image/x-icon" href="https://rifkytech.github.io/img/mexious.png">
-	
-	
+ <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+ <link rel="icon" type="image/x-icon" href="https://rifkytech.github.io/img/mexious.png">
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="X-UA-Compatible" content="IE=7" />
 <meta charset="utf-8">
