--- a/index.html
+++ b/index.html
@@ -72,7 +72,12 @@
 	<div class="rifky-conten-right-data">Linux Bash Programming <p>Bash Fil</p></div>
 	<div class="rifky-conten-right-data">FrontEnd Developer <p>HTML, CSS, JS</p></div>
 	<div class="rifky-conten-right-data">Linux <p>Ubuntu, Debian, Elementary</p></div>
-
+<div class="rifky-conten-left-copy">&#169; Muhammad Rifky 
+		<script type='text/javascript'>
+			var creditsyear = new Date() 
+			;document.write(creditsyear.getFullYear());
+		</script>
+	</div>
 </div>
 </div>
 </body>
