--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 </div>
 </div>
-	<div class="rifky-conten-left-copy">&#169; Muhammad Rifky 
+	<div class="rifky-conten-right-copy">&#169; Muhammad Rifky 
 		<script type='text/javascript'>
 			var creditsyear = new Date() 
 			;document.write(creditsyear.getFullYear());
