--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 	
 
 	<h2 id="skills">Skills</h2>
-	<div class="rifky-conten-right-data">Linux Bash Programming <p>Bash Fil</p></div>
-	<div class="rifky-conten-right-data">FrontEnd Developer <p>HTML, CSS, JS</p></div>
+	<div class="rifky-conten-right-data">Linux Bash Programming <p>Bash File</p></div>
+	<div class="rifky-conten-right-data">Front End Developer <p>HTML, CSS, JS</p></div>
 	<div class="rifky-conten-right-data">Linux <p>Ubuntu, Debian, Elementary</p></div>
 
 </div>
