--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	
 	<h2 id="contact">Contact</h2>
 	<div class="rifky-conten-right-data">Phone Number <p>0812-6007-5610</p></div>
-	<div class="rifky-conten-right-data">Email <p>rifky@app.mexious.net</p></div>
+	<div class="rifky-conten-right-data">Email <p>saya@rifky.tech</p></div>
 	<div class="rifky-conten-right-data">Website <p>www.mexious.net</p></div>
 	<div class="rifky-conten-right-data">Address <p>Jl. Legiun Veteran No.2 Medan Estate, Medan , Sumatera Utara , Indonesia</p></div>
 
